# schnecken_bot

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  deny.toml  license  prek.toml  rustfmt.toml  todo.md
.cargo/: config.toml
assets/: lichess_api_token.txt  players_we_like.txt  username.txt
src/: args.rs  bot_state.rs  config.rs  lichess_api.rs  lichess_types.rs  main.rs  user_commands.rs
src/bot/: _game.rs  bot_control.rs  commands.rs  mod.rs  state.rs
src/bot/games/: engine.rs  game.rs  games.rs  handle.rs  main.rs  message.rs  mod.rs
src/chess/: Cargo.toml  engine.rs  eval.rs  helpers.rs  mod.rs  theory.rs  various_masks.rs
src/chess/benches/: chess_library.rs  engine.rs
src/chess/engine/: book.rs  cache.rs  cache_boards.rs  comments.rs  core.rs  development.rs  endgame.rs  engine_test.rs  game_history.rs  middlegame.rs  mod.rs  opening.rs  pawn_structure.rs  position_evaluation.rs  search_result.rs  square_affinity.rs  theory.rs  uci.rs
src/chess/engine/books/: book.rs  mod.rs  provocative_book.rs
src/chess/engine/cache/: engine_cache.rs  evaluation_table.rs  mod.rs  move_list_cache_table.rs
src/chess/engine/config/: mod.rs  options.rs  play_style.rs
src/chess/engine/eval/: development.rs  endgame.rs  middlegame.rs  mod.rs  opening.rs  position.rs
src/chess/engine/eval/helpers/: bishop.rs  generic.rs  king.rs  knight.rs  mobility.rs  pawn.rs  rook.rs
src/chess/engine/eval_helpers/: bishop.rs  generic.rs  king.rs  mobility.rs  mod.rs  pawn.rs  rook.rs
src/chess/engine/nnue/: functions.rs  mod.rs  net.nuue  preprocessing.rs  readme.md  sanity.rs  train.rs
src/chess/engine/tables/: mod.rs
src/chess/engine/test/: engine_test.rs  mod.rs
src/chess/engine/tests/: engine.rs
src/chess/model/: board.rs  board_geometry.rs  board_mask.rs  castling_rights.rs  game_state.rs  mod.rs  moves.rs  piece.rs  piece_moves.rs  piece_set.rs  position.rs
src/chess/model/board_geometry/: diagonals.rs  holes.rs  lines.rs  mod.rs  passed_pawns_areas.rs  rays.rs
src/chess/model/containers/: mod.rs  move_list.rs  position_list.rs
src/chess/model/tables/: bishop_destinations.rs  mod.rs  pawn_destinations.rs  rook_destinations.rs  zobrist.rs
src/chess/model/tests/: board.rs  board_mask.rs  game_state.rs  mod.rs  moves.rs  piece.rs  piece_moves.rs  piece_set.rs
src/lichess/: Cargo.toml  api.rs  helpers.rs  lib.rs  mod.rs  traits.rs  types.rs
src/lichess/api/: account.rs  challenges.rs  game.rs  games.rs  mod.rs  users.rs
src/lichess/api/account/: mod.rs
src/lichess/api/challenges/: mod.rs
src/lichess/api/game/: mod.rs
src/lichess/api/users/: mod.rs
