[package]
name = "schnecken_bot"
version = "0.4.4"
authors = ["Nicolas Woltmann"]
description = "Lichess bot with integrated engine"
repository = "https://github.com/nobriot/schnecken_bot"
edition = "2021"
license = "MIT"
keywords = ["bot", "chess", "lichess", "lichess-api", "lichess-bot"]
default-run = "schnecken_bot"
resolver = "2"

[workspace]
members = ["src/lichess", "src/chess"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.12.24", features = ["blocking", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
log = { version = "0.4.28", features = ["std", "serde"] }
env_logger = "0.11.8"
serde_json = "1.0.145"
urlencoding = "2"
rand = "0.8"
futures-util = "0.3.31"
lazy_static = "1.5"
anyhow = "1.0.100"

# Our own libraries
lichess = { path = "src/lichess" }
chess = { path = "src/chess" }

[profile.dev]
opt-level = 3

# Used https://nnethercote.github.io/perf-book/title-page.html
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"

[[bin]]
name = "schnecken_bot"
path = "src/main.rs"
