[package]
name = "chess"
version = "0.0.1"
authors = ["Nicolas Woltmann"]
description = "Chess model and engine APIs"
edition = "2021"
license = "MIT"
keywords = ["chess", "engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.166", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.10.0"
tokio = "1.29.1"
io = "0.0.2"
serde_json = "1.0"
once_cell = "1.18"
urlencoding = "2.1"
websocket = "0.26.5"
rand = "0.8.5"
futures-util = "0.3"
futures = "0.3"
lazy_static = "1.4.0"

[lib]
name = "chess"
path = "lib.rs"
edition = "2021"
crate-type = ["lib"]
required-features = []

# Binaries generating other files
[[bin]]
name = "generate_rook_table"
path = "model/bin/generate_rook_table.rs"
