[package]
name = "chess"
version = "0.0.1"
authors = ["Nicolas Woltmann"]
description = "Chess model and engine APIs"
edition = "2021"
license = "MIT"
keywords = ["chess", "engine"]
default-run = "schnecken_engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
log = { version = "0.4.28", features = ["std", "serde"] }
rand = "0.8.5"
lazy_static = "1.5.0"
regex = "1.12.2"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-rand = "0.15.0"
futures = "0.3.31"

[lib]
name = "chess"
path = "lib.rs"
edition = "2021"
crate-type = ["lib"]
required-features = []

# UCI standalone engine
[[bin]]
name = "schnecken_engine"
path = "engine/uci.rs"

# Binaries generating other files
[[bin]]
name = "generate_rook_table"
path = "model/bin/generate_rook_table.rs"

[[bin]]
name = "generate_bishop_table"
path = "model/bin/generate_bishop_table.rs"

[[bin]]
name = "generate_passed_pawns_areas"
path = "model/bin/generate_passed_pawns_areas.rs"

#[[bin]]
#name = "generate_various_masks"
#path = "model/bin/generate_various_masks.rs"

# NNUE:
[[bin]]
name = "train_nnue"
path = "engine/nnue/train.rs"

[[bin]]
name = "nnue_sanity_check"
path = "engine/nnue/sanity.rs"

# Used for benchmarks:
[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "chess_library"
harness = false

[[bench]]
name = "engine"
harness = false
