[package]
name = "lichess"
version = "0.0.1"
authors = ["Nicolas Woltmann"]
description = "Lichess API wrapper"
license = "MIT"
keywords = ["lichess", "lichess-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.12.28", features = ["blocking", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
log = { version = "0.4.29", features = ["std", "serde"] }
tokio = "1.49.0"
serde_json = "1.0.149"
urlencoding = "2"
futures-util = "0.3.31"

[lib]
name = "lichess"
path = "lib.rs"
edition = "2021"
crate-type = ["lib"]
required-features = []
